Buttons get div ID and textarea value. Work on saving next.

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -24,7 +24,7 @@
     <!-- Given the option to remove or update the HTML below from the client, the developer is choosing to update it. That way, if any aesthetic designs were specifically desired by the client, the integrity of those choices will remain intact. The functionality, however, will 100% be implemented and designed by the developer.-->
     <div id="hour-0" class="row time-block">
       <div class="col-2 col-md-1 hour text-center py-3">12AM</div>
-      <textarea class="col-8 col-md-10 description" rows="3"> TEST </textarea>
+      <textarea class="col-8 col-md-10 description" rows="3"> </textarea>
       <button class="btn saveBtn col-2 col-md-1" aria-label="save">
         <i class="fas fa-save" aria-hidden="true"></i>
       </button>
