--- a/Develop/index.html
+++ b/Develop/index.html
@@ -20,7 +20,7 @@
     <p id="currentDay" class="lead p-0 mb-0">Visual Placeholder for day</p>
   </header>
   <div class="container-lg px-5">
-
+<!-- Content will be generated from the DOM. Reference JavaScript lines 6-18 for more details. -->
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
