--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="container-lg px-5">
 <!-- Content will be generated from the DOM. Reference JavaScript lines 6-18 for more details. -->
   </div>
-
+<footer class="mb-4"></footer>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U=" crossorigin="anonymous"></script>
